WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
47727
[GTK] mathml flaky tests after adding SystemFonts to the theme
https://bugs.webkit.org/show_bug.cgi?id=47727
Summary
[GTK] mathml flaky tests after adding SystemFonts to the theme
Alejandro G. Castro
Reported
2010-10-15 10:51:35 PDT
After the commit fixing the fonts in the forms these tests started to be flaky, mostly in the debug bots. mathml/presentation/fenced.xhtml mathml/presentation/roots.xhtml mathml/presentation/subsup.xhtml
http://trac.webkit.org/changeset/69818
Attachments
Ensure STIX fonts in DRT setup
(656.55 KB, patch)
2010-10-18 17:33 PDT
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Milowski
Comment 1
2010-10-17 10:44:57 PDT
I believe
bug 47774
has taken care of this. Can you check again?
Martin Robinson
Comment 2
2010-10-17 11:57:28 PDT
As I understand it, the tests differed between the bots, so we may need some extra machinery in the DRT setup to ensure that STIX fonts load.
Alex Milowski
Comment 3
2010-10-17 11:59:32 PDT
We don't use the STIX fonts yet. That has yet to be configured. We'd need to setup a check/download step in the run-webkit-tests script.
Martin Robinson
Comment 4
2010-10-17 12:13:18 PDT
(In reply to
comment #3
)
> We don't use the STIX fonts yet. That has yet to be configured. We'd need to setup a check/download step in the run-webkit-tests script.
The MathML stylesheet specifies them if I understand correctly. I believe that some of the bots have them and some of them don't or they have different versions.
Alex Milowski
Comment 5
2010-10-17 12:32:29 PDT
OK. I understand the issue now. We want them all to have it. I'd like the test infrastructure to guarantee this.
Alejandro G. Castro
Comment 6
2010-10-18 03:24:56 PDT
(In reply to
comment #1
)
> I believe
bug 47774
has taken care of this. Can you check again?
I've ran the tests locally and they still have issues with current results. I've checked also the STIX fonts in the bots a apparently the debug bots (32bits and 64bits) have it, do I have to look for some version or other specific information? bb-webkit-32 ~ # fc-list | grep STIX STIXIntegralsUp:style=Regular STIXIntegralsSm:style=Regular STIXSizeFourSym:style=Bold STIXNonUnicode:style=Bold STIXVariants:style=Regular STIXIntegralsSm:style=Bold STIXGeneral:style=Bold STIXIntegralsUp:style=Bold STIXGeneral:style=Italic STIXVariants:style=Bold STIXIntegralsUpD:style=Bold STIXNonUnicode:style=Italic STIXGeneral:style=Regular STIXSizeTwoSym:style=Bold STIXGeneral:style=Bold Italic STIXNonUnicode:style=Regular STIXNonUnicode:style=Bold Italic STIXSizeOneSym:style=Regular STIXSizeOneSym:style=Bold STIXSizeFourSym:style=Regular STIXIntegralsUpSm:style=Bold STIXSizeTwoSym:style=Regular STIXIntegralsD:style=Bold STIXIntegralsUpD:style=Regular STIXIntegralsD:style=Regular STIXSizeThreeSym:style=Regular STIXSizeFiveSym:style=Regular STIXIntegralsUpSm:style=Regular STIXSizeThreeSym:style=Bold bb-webkit-64 ~ # fc-list | grep STIX STIXIntegralsUp:style=Regular STIXIntegralsSm:style=Regular STIXSizeFourSym:style=Bold STIXNonUnicode:style=Bold STIXVariants:style=Regular STIXIntegralsSm:style=Bold STIXGeneral:style=Bold STIXIntegralsUp:style=Bold STIXGeneral:style=Italic STIXVariants:style=Bold STIXIntegralsUpD:style=Bold STIXNonUnicode:style=Italic STIXGeneral:style=Regular STIXSizeTwoSym:style=Bold STIXGeneral:style=Bold Italic STIXNonUnicode:style=Regular STIXNonUnicode:style=Bold Italic STIXSizeOneSym:style=Regular STIXSizeOneSym:style=Bold STIXSizeFourSym:style=Regular STIXIntegralsUpSm:style=Bold STIXSizeTwoSym:style=Regular STIXIntegralsD:style=Bold STIXIntegralsUpD:style=Regular STIXIntegralsD:style=Regular STIXSizeThreeSym:style=Regular STIXSizeFiveSym:style=Regular STIXIntegralsUpSm:style=Regular STIXSizeThreeSym:style=Bold
Alejandro G. Castro
Comment 7
2010-10-18 03:35:37 PDT
At this point there is a new mathml/presentation test that it is failing in the 32bots (debug and release) but it is not failing in the 64bits debug bot, at least once. I'm going to add it to the Skipped file until we find a solution: mathml/presentation/fenced-mi.xhtml
Alex Milowski
Comment 8
2010-10-18 07:29:46 PDT
The tests are failing because the current results do not use the STIX fonts. We need to make sure all the build bots have the STIX fonts. This should get all sorted out shortly and we'll re-baseline the MathML tests with the STIX fonts.
Martin Robinson
Comment 9
2010-10-18 17:33:21 PDT
Created
attachment 71105
[details]
Ensure STIX fonts in DRT setup
Alex Milowski
Comment 10
2010-10-18 18:24:07 PDT
(In reply to
comment #9
)
> Created an attachment (id=71105) [details] > Ensure STIX fonts in DRT setup
I've looked at these results and they look pretty good. The issue with the glyph stacking for the absolute sign (vertical bar) and integral sign are some STIX/GTK issue we'll need to work on. I've filed a bug for the absolute sign already. These have to do with the interaction between the glyph stacking algorithm and the font metrics.
Alejandro G. Castro
Comment 11
2010-10-19 02:43:18 PDT
(In reply to
comment #9
)
> Created an attachment (id=71105) [details] > Ensure STIX fonts in DRT setup
I've tested the patch locally running the mathml tests, the visual result look good but the expected results do not match. Apparently small pixel differences.
Gustavo Noronha (kov)
Comment 12
2010-10-21 11:52:36 PDT
Comment on
attachment 71105
[details]
Ensure STIX fonts in DRT setup Let's do it.
Martin Robinson
Comment 13
2010-10-21 12:12:01 PDT
Committed
r70253
: <
http://trac.webkit.org/changeset/70253
>
Alejandro G. Castro
Comment 14
2010-10-22 10:42:51 PDT
I'm afraid this did not fix the issue mathml/presentation tests are still flaky.
Alejandro G. Castro
Comment 15
2010-10-22 23:58:33 PDT
I'm skipping all the tests until we find the problem:
http://trac.webkit.org/changeset/70383
Alejandro G. Castro
Comment 16
2010-11-23 03:57:46 PST
Probably the fix in
http://trac.webkit.org/changeset/72413
could solve this issue, we could try to unskip these tests to check it.
Alex Milowski
Comment 17
2010-11-23 08:57:13 PST
(In reply to
comment #16
)
> Probably the fix in
http://trac.webkit.org/changeset/72413
could solve this issue, we could try to unskip these tests to check it.
That sounds like a good idea. Is there any way to test this other than turning the test back on and waiting till things fail in the build bots?
Alejandro G. Castro
Comment 18
2010-11-24 04:04:47 PST
(In reply to
comment #17
)
> (In reply to
comment #16
) > > Probably the fix in
http://trac.webkit.org/changeset/72413
could solve this issue, we could try to unskip these tests to check it. > > That sounds like a good idea. Is there any way to test this other than turning the test back on and waiting till things fail in the build bots?
I'm afraid we can not 100% sure, I'm going to run the tests in a loop in my local machine and in case I can not reproduce it I'll unskip it.
Alejandro G. Castro
Comment 19
2010-11-24 07:39:30 PST
Unskipped, let's check if that works.
http://trac.webkit.org/changeset/72670
Alejandro G. Castro
Comment 20
2010-11-24 09:39:32 PST
It did not fix the issue, I'm going to skip again and we have to check the issue.
http://build.webkit.org/results/GTK
Linux 64-bit Debug/r72674 (16327)/mathml/presentation/subsup-pretty-diff.html
Eric Seidel (no email)
Comment 21
2010-12-14 01:34:53 PST
Seems this should be closed?
Alejandro G. Castro
Comment 22
2010-12-14 02:34:51 PST
(In reply to
comment #21
)
> Seems this should be closed?
They are still in the Skipped file and flaky, so we still have to check the issue.
Eric Seidel (no email)
Comment 23
2010-12-14 15:16:02 PST
Attachment 71105
[details]
was posted by a committer and has review+, assigning to Martin Robinson for commit.
Martin Robinson
Comment 24
2010-12-14 18:51:26 PST
Comitted as
http://trac.webkit.org/changeset/70253
Zan Dobersek
Comment 25
2012-07-19 06:03:35 PDT
The tests required updated baselines, which was done in
r122704
[1]. The baselines are almost identical to those for Mac port, and with the tests now passing with no flakiness visible I've removed their expectations in
r123096
[2]. Closing the bug. [1] -
http://trac.webkit.org/changeset/122704
[2] -
http://trac.webkit.org/changeset/123096
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug