2010-10-18  Martin Robinson  <mrobinson@igalia.com>

Reviewed by Gustavo Noronha Silva.

        [GTK] mathml flaky tests after adding SystemFonts to the theme
        https://bugs.webkit.org/show_bug.cgi?id=47727

        Rebaseline, add pixel results for, and unskip all MathML tests.

        * platform/gtk/Skipped: Unskip MathML tests.
        * platform/gtk/mathml/presentation/attributes-expected.checksum:
        * platform/gtk/mathml/presentation/attributes-expected.png:
        * platform/gtk/mathml/presentation/attributes-expected.txt:
        * platform/gtk/mathml/presentation/fenced-expected.checksum: Added.
        * platform/gtk/mathml/presentation/fenced-expected.png: Added.
        * platform/gtk/mathml/presentation/fenced-expected.txt:
        * platform/gtk/mathml/presentation/fenced-mi-expected.checksum:
        * platform/gtk/mathml/presentation/fenced-mi-expected.png:
        * platform/gtk/mathml/presentation/fenced-mi-expected.txt:
        * platform/gtk/mathml/presentation/fractions-expected.checksum:
        * platform/gtk/mathml/presentation/fractions-expected.png:
        * platform/gtk/mathml/presentation/fractions-expected.txt:
        * platform/gtk/mathml/presentation/fractions-vertical-alignment-expected.checksum:
        * platform/gtk/mathml/presentation/fractions-vertical-alignment-expected.png:
        * platform/gtk/mathml/presentation/fractions-vertical-alignment-expected.txt:
        * platform/gtk/mathml/presentation/mo-expected.checksum:
        * platform/gtk/mathml/presentation/mo-expected.png:
        * platform/gtk/mathml/presentation/mo-expected.txt:
        * platform/gtk/mathml/presentation/over-expected.checksum:
        * platform/gtk/mathml/presentation/over-expected.png:
        * platform/gtk/mathml/presentation/over-expected.txt:
        * platform/gtk/mathml/presentation/roots-expected.checksum: Added.
        * platform/gtk/mathml/presentation/roots-expected.png: Added.
        * platform/gtk/mathml/presentation/roots-expected.txt:
        * platform/gtk/mathml/presentation/row-alignment-expected.checksum:
        * platform/gtk/mathml/presentation/row-alignment-expected.png:
        * platform/gtk/mathml/presentation/row-alignment-expected.txt:
        * platform/gtk/mathml/presentation/row-expected.checksum:
        * platform/gtk/mathml/presentation/row-expected.png:
        * platform/gtk/mathml/presentation/row-expected.txt:
        * platform/gtk/mathml/presentation/style-expected.checksum:
        * platform/gtk/mathml/presentation/style-expected.png:
        * platform/gtk/mathml/presentation/style-expected.txt:
        * platform/gtk/mathml/presentation/sub-expected.checksum: Added.
        * platform/gtk/mathml/presentation/sub-expected.png: Added.
        * platform/gtk/mathml/presentation/sub-expected.txt:
        * platform/gtk/mathml/presentation/subsup-expected.checksum: Added.
        * platform/gtk/mathml/presentation/subsup-expected.png: Added.
        * platform/gtk/mathml/presentation/subsup-expected.txt:
        * platform/gtk/mathml/presentation/sup-expected.checksum: Added.
        * platform/gtk/mathml/presentation/sup-expected.png: Added.
        * platform/gtk/mathml/presentation/sup-expected.txt:
        * platform/gtk/mathml/presentation/tables-expected.checksum: Added.
        * platform/gtk/mathml/presentation/tables-expected.png: Added.
        * platform/gtk/mathml/presentation/tables-expected.txt:
        * platform/gtk/mathml/presentation/tokenElements-expected.checksum:
        * platform/gtk/mathml/presentation/tokenElements-expected.png:
        * platform/gtk/mathml/presentation/tokenElements-expected.txt:
        * platform/gtk/mathml/presentation/under-expected.checksum:
        * platform/gtk/mathml/presentation/under-expected.png:
        * platform/gtk/mathml/presentation/under-expected.txt:
        * platform/gtk/mathml/presentation/underover-expected.checksum:
        * platform/gtk/mathml/presentation/underover-expected.png:
        * platform/gtk/mathml/presentation/underover-expected.txt:
2010-10-18  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Gustavo Noronha Silva.

        [GTK] mathml flaky tests after adding SystemFonts to the theme
        https://bugs.webkit.org/show_bug.cgi?id=47727

        The Fontconfig setup in the GTK+ now specifically checks for and
        loads the STIX fonts for MathML tests.

        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (initializeFonts): Add hooks for loading the STIX fonts specifically.

Canonical link: https://commits.webkit.org/60804@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70253 268f45cc-cd09-0410-ab3c-d52691b4dbfc